--- a/styles/globals.css
+++ b/styles/globals.css
@@ -40,3 +40,25 @@ body {
 .hide-scrollbar::-webkit-scrollbar {
   display: none; /* Chrome, Safari, Opera*/
 }
+
+@layer components {
+  .screen {
+    @apply w-full max-w-xl mx-auto h-screen bg-white items-center flex justify-center;
+  }
+
+  .long-button {
+    @apply w-full font-extrabold rounded-lg py-3 border-[1.5px];
+  }
+
+  .main-input {
+    @apply p-2 w-full border-2 focus:ring-[#6E7CF2] focus:border-[#6E7CF2] border-[#BDBDBD] rounded-lg text-[#BDBDBD] font-bold placeholder:font-bold placeholder:text-[#BDBDBD];
+  }
+
+  .gray-line {
+    @apply bg-[#EEEEEE] h-[1px] flex justify-center;
+  }
+
+  .check-box {
+    @apply px-[7px] py-[7px] rounded-md cursor-pointer border-2 border-[#616161];
+  }
+}
