--- a/styles/globals.css
+++ b/styles/globals.css
@@ -51,7 +51,7 @@ body {
   }
 
   .main-input {
-    @apply p-2 w-full border-2 focus:ring-[#6E7CF2] focus:border-[#6E7CF2] border-[#BDBDBD] rounded-lg text-[#BDBDBD] font-bold placeholder:font-bold placeholder:text-[#BDBDBD];
+    @apply p-2 w-full border-2  focus:ring-primary-1 focus:border-primary-1 border-gray-4 rounded-lg text-gray-4 font-bold placeholder:font-bold placeholder:text-gray-4;
   }
 
   .gray-line {
@@ -59,6 +59,6 @@ body {
   }
 
   .check-box {
-    @apply px-[7px] py-[7px] rounded-md cursor-pointer border-2 border-[#616161];
+    @apply px-[7px] py-[7px] rounded-md cursor-pointer border-2 border-gray-7;
   }
 }
