--- a/styles/globals.css
+++ b/styles/globals.css
@@ -55,7 +55,7 @@ body {
   }
 
   .gray-line {
-    @apply bg-[#EEEEEE] h-[1px] flex justify-center;
+    @apply bg-gray-2 h-[1px] flex justify-center;
   }
 
   .check-box {
