🎨🔮아이콘 추가 및 css 약간수정

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -59,7 +59,7 @@ input::-webkit-inner-spin-button {
   }
 
   .long-button {
-    @apply w-full font-semibold rounded-lg py-3 border;
+    @apply w-full font-semibold rounded-lg py-3 cursor-pointer border;
   }
 
   .main-input {
