--- a/styles/globals.css
+++ b/styles/globals.css
@@ -59,7 +59,7 @@ input::-webkit-inner-spin-button {
   }
 
   .long-button {
-    @apply w-full font-semibold rounded-lg py-3 cursor-pointer border;
+    @apply w-full font-semibold rounded-full py-2 cursor-pointer border;
   }
 
   .main-input {
@@ -72,5 +72,17 @@ input::-webkit-inner-spin-button {
 
   .check-box {
     @apply w-4 h-4 rounded-[4px];
+  }
+
+  .card {
+    @apply flex p-6 flex-col items-start rounded-lg shadow-md;
+  }
+
+  .mySurvey-Btn {
+    @apply border-[1px] rounded-3xl py-2 w-full font-semibold;
+  }
+
+  .mySurvey-LongBtn {
+    @apply mySurvey-Btn px-8;
   }
 }
