--- a/styles/globals.css
+++ b/styles/globals.css
@@ -55,7 +55,7 @@ input::-webkit-inner-spin-button {
 
 @layer components {
   .screen {
-    @apply w-full mx-auto bg-[#F8F8F8] h-screen items-center flex justify-center;
+    @apply w-full bg-[#F8F8F8] h-screen items-center flex justify-center;
   }
 
   .white-screen {
@@ -67,7 +67,11 @@ input::-webkit-inner-spin-button {
   }
 
   .list-screen {
-    @apply inner-screen h-screen pt-[106px] pb-[105px] px-6 gap-3 flex flex-col overflow-auto hide-scrollbar;
+    @apply inner-screen h-screen pt-[106px] pb-[105px] px-6;
+  }
+
+  .list {
+    @apply flex flex-col overflow-auto hide-scrollbar gap-3;
   }
 
   .long-button {
