--- a/styles/globals.css
+++ b/styles/globals.css
@@ -55,7 +55,7 @@ input::-webkit-inner-spin-button {
 
 @layer components {
   .screen {
-    @apply w-full bg-[#F8F8F8] h-screen items-center flex justify-center;
+    @apply w-full bg-[#F8F8F8] h-screen pt-[82px] pb-[81px] items-center flex justify-center;
   }
 
   .white-screen {
@@ -67,7 +67,7 @@ input::-webkit-inner-spin-button {
   }
 
   .list-screen {
-    @apply max-w-xl w-full h-screen pt-[82px] pb-[81px] gap-3 flex flex-col overflow-scroll hide-scrollbar;
+    @apply relative max-w-xl w-full h-full gap-3 flex flex-col overflow-scroll hide-scrollbar;
   }
 
   .list {
