--- a/styles/globals.css
+++ b/styles/globals.css
@@ -75,7 +75,7 @@ input::-webkit-inner-spin-button {
   }
 
   .long-button {
-    @apply w-full font-semibold rounded-full py-2 cursor-pointer border;
+    @apply w-full font-semibold rounded-full py-2 cursor-pointer border whitespace-nowrap;
   }
 
   .main-input {
