--- a/styles/globals.css
+++ b/styles/globals.css
@@ -74,6 +74,10 @@ input::-webkit-inner-spin-button {
     @apply flex flex-col px-6 py-6 gap-3;
   }
 
+  .flex-center {
+    @apply flex justify-center items-center;
+  }
+
   .long-button {
     @apply w-full font-semibold rounded-full py-2 cursor-pointer border whitespace-nowrap;
   }
